--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -30,6 +30,13 @@
         margin: 0 auto;
         text-align: center;
     }
+}
 
+#search {
+    width: 90%;
+    margin: 10px auto;
 
+    input {
+        border-radius: 10px;
+    }
 }
