filtred apartment with city

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10965,14 +10965,15 @@ a.text-dark:focus {
 #elenco {
   width: 50%;
   margin: 0 auto;
-  display: inline-block;
-  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 #elenco #apartment {
-  padding: 20px;
+  padding: 13%;
   border: 1px solid black;
-  margin: 10px 0;
+  margin: 10px;
 }
 
 .form {
