--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -34,18 +34,53 @@
 }
 
 
-#search {
-    width: 90%;
-    margin: 10px auto;
-
-    input {
-        border-radius: 10px;
+.search-box {
+    position: absolute;
+    top: 10%;
+    left: 15%;
+    transform: translate(-50%, -50%);
+    background-color: #2f3640;
+    height: 40px;
+    border-radius: 40px;
+    padding: 0px;
+    
+    .search-btn {
+        color: #e84118;
+        float: right;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background: #2f3640;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
-    .fas {
-        cursor: pointer;
+    .search-txt {
+        border:none;
+        background: none;
+        outline: none;
+        float: left;
+        padding: 0;
+        color: white;
+        font-size: 16px;
+        transition: 0.4s;
+        line-height: 40px;
+        width: 0px;
     }
+
 }
 
+.search-box:hover > .search-txt{
+
+    width: 240px;
+    padding: 0 6px;
+
+}
+
+.search-box:hover > .search-btn{
+
+  background-color: white;
+}
 
 
