--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -83,4 +83,55 @@
   background-color: white;
 }
 
+#sponsorship {
+
+    display: flex;
+    justify-content: center;
+
+    a {
+        text-decoration: none;
+        color: black;
+    }
+
+    .sponsor {
+
+        border: 1px solid black;
+        height: 115px;
+        width: 160px;
+        margin: 0 15px;
+        transition: 0.2s;
+        text-align: center;
+        box-shadow: 10px 10px 5px #2f3640;
+
+        .price {
+            display: none;
+        }
+    }
+
+    .sponsor:hover {
+
+        height: 130px;
+
+        .price {
+            display: inline;
+        }
+    }
+
+    .Silver {
+
+        background-color: silver;
+
+    }
+
+    .Gold {
+
+        background-color: gold;
+    }
+
+    .Platinum {
+
+        background-color: #e5e4e2;
+    }
+}
+
 
