--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -87,6 +87,8 @@
 
     display: flex;
     justify-content: center;
+    background-color: black;
+    height: 100%;
 
     a {
         text-decoration: none;
@@ -95,42 +97,49 @@
 
     .sponsor {
 
-        border: 1px solid black;
-        height: 115px;
-        width: 160px;
+        // border: 1px solid black;
+        // height: 130px;
+        // width: 160px;
         margin: 0 15px;
-        transition: 0.2s;
+        // transition: 0.2s;
         text-align: center;
-        box-shadow: 10px 10px 5px #2f3640;
+        // box-shadow: 10px 10px 5px #2f3640;
 
-        .price {
-            display: none;
+        img {
+            width: 80%;
+            transition: 0.2s;
+        }
+
+        .info {
+            font-size: 20px;
         }
     }
 
     .sponsor:hover {
 
-        height: 130px;
-
-        .price {
-            display: inline;
+        img {
+            width: 90%;
         }
     }
 
     .Silver {
 
-        background-color: silver;
+        background-color: black;
+        color: silver;
 
     }
 
     .Gold {
 
-        background-color: gold;
+        // background-color: purple;
+        color: gold;
     }
 
     .Platinum {
 
-        background-color: #e5e4e2;
+        // background-color: #e5e4e2;
+        // background-color: black;
+        color: #e5e4e2;
     }
 }
 
