--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -101,13 +101,13 @@
         // height: 130px;
         // width: 160px;
         margin: 0 15px;
-        // transition: 0.2s;
+        transition: 0.45s;
         text-align: center;
         // box-shadow: 10px 10px 5px #2f3640;
 
         img {
-            width: 80%;
-            transition: 0.2s;
+            width: 70%;
+            transition: 0.45s;
         }
 
         .info {
@@ -118,7 +118,9 @@
     .sponsor:hover {
 
         img {
-            width: 90%;
+
+           transform: rotateY(360deg);
+           width: 90%;
         }
     }
 
