--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,20 +7,7 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-    .elenco {
-        // justify-content: space-around;
-        width: 25%;
-        display: flex;
-
-        .apartment {
-            padding: 13%;
-            border: 1px solid black;
-            margin: 10px;    
-            float: right; 
-        }
-    }
-
-
+    @import 'footer';
     #containerForm {
 
         .form{
