views massage apartment in dashbord

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -170,3 +170,29 @@
             color: #e5e4e2;
         }
     }
+
+    #views {
+
+        margin: 0 auto;
+        width: 50%;
+
+        .noMessage {
+
+            border: 1px solid red;
+            line-height: 50px;
+            text-align: center;
+
+        }
+
+        .messageViews {
+            line-height: 50px;
+            border: 1px solid black;
+            margin: 20px;
+            text-align: center;
+
+            p {
+                padding: 0;
+            }
+        }
+
+    }
