--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11095,3 +11095,25 @@ a.text-dark:focus {
   color: #e5e4e2;
 }
 
+#views {
+  margin: 0 auto;
+  width: 50%;
+}
+
+#views .noMessage {
+  border: 1px solid red;
+  line-height: 50px;
+  text-align: center;
+}
+
+#views .messageViews {
+  line-height: 50px;
+  border: 1px solid black;
+  margin: 20px;
+  text-align: center;
+}
+
+#views .messageViews p {
+  padding: 0;
+}
+
