--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11081,6 +11081,26 @@ footer hr {
   font-weight: bold;
 }
 
+#payment-container {
+  width: 50%;
+  margin: 2rem auto 3rem;
+}
+
+#payment-container #submit-button {
+  background: #ffae00;
+  color: #fff;
+  border-radius: 30px;
+  border: none;
+  padding: 10px 30px;
+  transition: all 0.2s ease;
+}
+
+#payment-container #submit-button:hover {
+  box-shadow: 0 0 20px #cbcbcb;
+  color: #fff;
+  font-weight: bold;
+}
+
 #containerForm .form {
   text-align: center;
   background-color: #b19f90;
