--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,7 @@
 @import "footer";
 @import "sponsorship";
 @import "payment";
+@import "userDashboard";
 #containerForm {
     .form {
         // margin: 0 auto;
