--- a/resources/sass/_userDashboard.scss
+++ b/resources/sass/_userDashboard.scss
@@ -53,6 +53,7 @@
             margin-bottom: 2rem;
             transition: all 0.2s ease;
             &:hover {
+                box-shadow: 0 0 20px #cbcbcb;
                 border-color: #a0a0a0;
                 transform: scale(1.01);
             }
