--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,6 @@
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Nunito");
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
 // Variables
 @import "variables";
 
@@ -11,6 +11,11 @@
 @import "sponsorship";
 @import "payment";
 @import "userDashboard";
+
+body {
+    font-family: "Montserrat", sans-serif;
+}
+
 #containerForm {
     .form {
         // margin: 0 auto;
