--- a/public/css/app.css
+++ b/public/css/app.css
@@ -254,7 +254,7 @@ button,
 select,
 optgroup,
 textarea {
-  margin: 0;
+  /* margin: 0; */
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
