--- a/resources/sass/_footer.scss
+++ b/resources/sass/_footer.scss
@@ -1,25 +1,26 @@
-footer{
+footer {
     background-color: #332b27;
     color: white;
-    h1{
-    padding:60px 0  20px 50px;
-    color: #FFAE00;
+    h1 {
+        padding: 60px 0 20px 50px;
+        color: #ffae00;
+        font-family: "Noto Serif Display", serif;
     }
 
-    h4{
-        padding:20px 0 20px 40px;
+    h4 {
+        padding: 20px 0 20px 40px;
     }
 
-    li{
+    li {
         list-style-type: none;
     }
 
-    p{
-        padding:20px 0 20px 50px; 
+    p {
+        padding: 20px 0 20px 50px;
     }
 
-    hr{
-        background-color:white;
+    hr {
+        background-color: white;
         width: 80%;
         margin: 40px auto;
     }
