--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,12 +1,14 @@
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Nunito");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@700&display=swap");
 // Variables
 @import "variables";
 
 // Bootstrap
 @import "~bootstrap/scss/bootstrap";
 
+@import "header-home";
 @import "footer";
 @import "sponsorship";
 @import "payment";
