add partment details layout

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,6 +13,7 @@
 @import "sponsorship";
 @import "payment";
 @import "userDashboard";
+@import "apartment-details";
 
 body {
     font-family: "Montserrat", sans-serif;
