--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11228,6 +11228,165 @@ footer hr {
   padding: 5px 10px;
 }
 
+#apartment-details {
+  width: 80%;
+  margin: 3rem auto;
+}
+
+#apartment-details .my-btn {
+  background: #ffae00;
+  color: #fff;
+  border-radius: 30px;
+  border: none;
+  padding: 10px 30px;
+  transition: all 0.2s ease;
+}
+
+#apartment-details .my-btn:hover {
+  box-shadow: 0 0 20px #cbcbcb;
+  color: #fff;
+  font-weight: bold;
+}
+
+#apartment-details .my-btn.btn-outline {
+  background: #fff;
+  border: 2px solid #ffae00;
+  color: #ffae00;
+}
+
+#apartment-details .user-controls {
+  text-align: right;
+  margin-bottom: 3rem;
+}
+
+#apartment-details .user-controls a {
+  margin-left: 2rem;
+}
+
+#apartment-details .apartment-header {
+  font-weight: bold;
+}
+
+#apartment-details .apartment-header h1 {
+  margin-bottom: 2rem;
+}
+
+#apartment-details .apartment-header div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#apartment-details .img-container {
+  margin: 2rem 0;
+  width: 100%;
+  height: 400px;
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  gap: 1em 1em;
+  grid-auto-flow: row;
+  grid-template-areas: "cover side1 side2";
+}
+
+#apartment-details .img-container img {
+  max-width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#apartment-details .img-container .cover-image {
+  grid-area: cover;
+  background-color: red;
+  height: 100%;
+  width: 100%;
+}
+
+#apartment-details .img-container .side1 {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 1em 1em;
+  grid-auto-flow: row;
+  grid-template-areas: "." ".";
+  grid-area: side1;
+}
+
+#apartment-details .img-container .side2 {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 1em 1em;
+  grid-auto-flow: row;
+  grid-template-areas: "." ".";
+  grid-area: side2;
+}
+
+#apartment-details .img-container .side-img {
+  background-color: red;
+  height: 100%;
+  width: 100%;
+}
+
+#apartment-details .apartment-description {
+  margin-top: 10rem;
+  padding: 2rem 1rem;
+  display: flex;
+}
+
+#apartment-details .apartment-description .text {
+  width: 70%;
+  border-right: 1px solid #cbcbcb;
+}
+
+#apartment-details .apartment-description .text h3 {
+  font-weight: bold;
+}
+
+#apartment-details .apartment-description .text p {
+  width: 80%;
+}
+
+#apartment-details .apartment-description .text .ap-numbers {
+  display: flex;
+}
+
+#apartment-details .apartment-description .text .ap-numbers h5 {
+  margin-right: 1rem;
+}
+
+#apartment-details .apartment-description .services {
+  padding-left: 2rem;
+}
+
+#apartment-details .map-container {
+  margin-bottom: 2rem;
+}
+
+#apartment-details .map-container .map {
+  width: 100%;
+  height: 400px;
+}
+
+#apartment-details .msg-container {
+  width: 50%;
+  margin: 3rem auto;
+}
+
+#apartment-details .msg-container h4 {
+  margin-bottom: 2rem;
+}
+
+#apartment-details .msg-container input:not(.my-btn),
+#apartment-details .msg-container textarea {
+  width: 100%;
+  padding: 0.5rem 1rem;
+  border-radius: 30px;
+  margin-bottom: 1rem;
+  border: 1px solid #cbcbcb;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
 }
