--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11113,39 +11113,39 @@ footer hr {
   margin: 2rem auto 3rem;
 }
 
-#payment-container #submit-button {
+#payment-container .my-btn {
   background: #ffae00;
   color: #fff;
   border-radius: 30px;
-  border: none;
+  border: solid #ffae00;
   padding: 10px 30px;
   transition: all 0.2s ease;
+  text-decoration: none;
 }
 
-#payment-container #submit-button:hover {
-  box-shadow: 0 0 20px #cbcbcb;
-  color: #fff;
+#payment-container .my-btn:hover {
   font-weight: bold;
+  background-color: #332b27;
 }
 
 #user-dashboard .my-btn {
   background: #ffae00;
   color: #fff;
   border-radius: 30px;
-  border: none;
+  border: solid #ffae00;
   padding: 10px 30px;
   transition: all 0.2s ease;
+  text-decoration: none;
 }
 
 #user-dashboard .my-btn:hover {
-  box-shadow: 0 0 20px #cbcbcb;
-  color: #fff;
   font-weight: bold;
+  background-color: #332b27;
 }
 
 #user-dashboard .my-btn.btn-outline {
   background: #fff;
-  border: 2px solid #ffae00;
+  border: solid #ffae00;
   color: #ffae00;
 }
 
@@ -11156,7 +11156,6 @@ footer hr {
 
 #user-dashboard .my-btn.btn-sponsored:hover {
   cursor: not-allowed;
-  box-shadow: none;
 }
 
 #user-dashboard hr {
@@ -11237,20 +11236,20 @@ footer hr {
   background: #ffae00;
   color: #fff;
   border-radius: 30px;
-  border: none;
+  border: solid #ffae00;
   padding: 10px 30px;
   transition: all 0.2s ease;
+  text-decoration: none;
 }
 
 #apartment-details .my-btn:hover {
-  box-shadow: 0 0 20px #cbcbcb;
-  color: #fff;
   font-weight: bold;
+  background-color: #332b27;
 }
 
 #apartment-details .my-btn.btn-outline {
   background: #fff;
-  border: 2px solid #ffae00;
+  border: solid #ffae00;
   color: #ffae00;
 }
 
