--- a/resources/sass/_payment.scss
+++ b/resources/sass/_payment.scss
@@ -2,17 +2,17 @@
     width: 50%;
     margin: 2rem auto 3rem;
 
-    #submit-button {
+    .my-btn {
         background: #ffae00;
         color: #fff;
         border-radius: 30px;
-        border: none;
+        border: solid #ffae00;
         padding: 10px 30px;
         transition: all 0.2s ease;
+        text-decoration: none;
         &:hover {
-            box-shadow: 0 0 20px #cbcbcb;
-            color: #fff;
             font-weight: bold;
+            background-color: #332b27;
         }
     }
 }
