--- a/resources/sass/_userDashboard.scss
+++ b/resources/sass/_userDashboard.scss
@@ -3,17 +3,17 @@
         background: #ffae00;
         color: #fff;
         border-radius: 30px;
-        border: none;
+        border: solid #ffae00;
         padding: 10px 30px;
         transition: all 0.2s ease;
+        text-decoration: none;
         &:hover {
-            box-shadow: 0 0 20px #cbcbcb;
-            color: #fff;
             font-weight: bold;
+            background-color: #332b27;
         }
         &.btn-outline {
             background: #fff;
-            border: 2px solid #ffae00;
+            border: solid #ffae00;
             color: #ffae00;
         }
         &.btn-sponsored {
@@ -21,10 +21,10 @@
             color: #cbcbcb;
             &:hover {
                 cursor: not-allowed;
-                box-shadow: none;
             }
         }
     }
+
     hr {
         margin: 1rem auto 2rem;
         width: 90%;
