fix minor layout changes

--- a/resources/sass/_userDashboard.scss
+++ b/resources/sass/_userDashboard.scss
@@ -1,4 +1,9 @@
 #user-dashboard {
+    min-height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     .my-btn {
         background: #ffae00;
         color: #fff;
