--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -19,7 +19,15 @@ body {
     font-family: "Montserrat", sans-serif;
 }
 
+body, html {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+}
+
 #containerForm {
+    min-height: 50vh;
+    
     .form {
         // margin: 0 auto;
         text-align: center;
