--- a/resources/sass/_apartment-details.scss
+++ b/resources/sass/_apartment-details.scss
@@ -10,11 +10,15 @@
         border-radius: 30px;
         border: solid #ffae00;
         padding: 10px 30px;
-        transition: all 0.2s ease;
+        transition: 0.2s;
         text-decoration: none;
+        
+
         &:hover {
-            font-weight: bold;
             background-color: #332b27;
+            padding: 10px 35px;
+            font-weight: bold;
+
         }
         &.btn-outline {
             background: #fff;
