--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,9 @@
 @import "payment";
 @import "userDashboard";
 @import "apartment-details";
+@import "register";
+@import "login";
+@import "apartment-create";
 
 body {
     font-family: "Montserrat", sans-serif;
