--- a/resources/sass/_apartment-details.scss
+++ b/resources/sass/_apartment-details.scss
@@ -1,9 +1,6 @@
 #apartment-details {
     width: 80%;
     margin: 3rem auto;
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
     .my-btn {
         background: #ffae00;
         color: #fff;
@@ -12,13 +9,11 @@
         padding: 10px 30px;
         transition: 0.2s;
         text-decoration: none;
-        
 
         &:hover {
             background-color: #332b27;
             padding: 10px 35px;
             font-weight: bold;
-
         }
         &.btn-outline {
             background: #fff;
@@ -45,53 +40,20 @@
         }
     }
     .img-container {
-        margin: 2rem 0;
+        margin: 5rem 0 10rem;
         width: 100%;
         height: 400px;
         display: grid;
-        grid-template-columns: 2fr 1fr 1fr;
-        grid-template-rows: 1fr;
-        gap: 1em 1em;
-        grid-auto-flow: row;
-        grid-template-areas: "cover side1 side2";
+        grid-template-columns: repeat(4, 1fr);
+        gap: 1rem 1rem;
         img {
             max-width: 100%;
             height: 100%;
             object-fit: cover;
-        }
-        .cover-image {
-            grid-area: cover;
-            background-color: red;
-            height: 100%;
-            width: 100%;
-        }
-        .side1 {
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: 1fr 1fr;
-            gap: 1em 1em;
-            grid-auto-flow: row;
-            grid-template-areas:
-                "."
-                ".";
-            grid-area: side1;
-        }
-
-        .side2 {
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: 1fr 1fr;
-            gap: 1em 1em;
-            grid-auto-flow: row;
-            grid-template-areas:
-                "."
-                ".";
-            grid-area: side2;
-        }
-        .side-img {
-            background-color: red;
-            height: 100%;
-            width: 100%;
+            &:first-child {
+                grid-column: 1 / 3;
+                grid-row: 1 / 3;
+            }
         }
     }
     .apartment-description {
