--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11302,8 +11302,8 @@ footer hr {
 }
 
 #apartment-details .img-container img {
-  max-width: 100%;
-  height: 100%;
+  width: 100%;
+  max-height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
