--- a/resources/sass/_apartment-details.scss
+++ b/resources/sass/_apartment-details.scss
@@ -47,8 +47,8 @@
         grid-template-columns: repeat(4, 1fr);
         gap: 1rem 1rem;
         img {
-            max-width: 100%;
-            height: 100%;
+            width: 100%;
+            max-height: 100%;
             object-fit: cover;
             &:first-child {
                 grid-column: 1 / 3;
