--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11303,9 +11303,11 @@ footer hr {
 
 #apartment-details .img-container img {
   width: 100%;
-  max-height: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
 }
 
 #apartment-details .img-container img:first-child {
