--- a/resources/sass/_apartment-details.scss
+++ b/resources/sass/_apartment-details.scss
@@ -48,8 +48,9 @@
         gap: 1rem 1rem;
         img {
             width: 100%;
-            max-height: 100%;
+            height: 100%;
             object-fit: cover;
+            object-position: center;
             &:first-child {
                 grid-column: 1 / 3;
                 grid-row: 1 / 3;
