--- a/resources/sass/_login.scss
+++ b/resources/sass/_login.scss
@@ -1,36 +1,34 @@
-#containerForm{
-    form input{
-        margin-top:15px;
-        border-radius:50px;
-        border:1px solid grey;
-        height:45px;
-        width: 100%;
+#containerForm_login {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 80px 0;
+
+    input {
+        padding: 10px 200px 10px 20px;
+        border-radius: 30px;
+        border: 1px solid grey;
+        margin: 10px 0;
     }
 
-    form{
-        width:30%;
-        margin: 60px auto 40px;
-        height:25vh;
-    }
-
-    #button_register{
-        color: #FFFFFF;
+    #button_register {
+        color: #ffffff;
         font-family: Helvetica;
         font-size: 15px;
-        background-color: #FFAE00;
+        background-color: #ffae00;
         text-decoration: none;
         cursor: pointer;
-        padding:15px 15px;
-        border: #FFAE00;
+        padding: 15px 15px;
+        border: #ffae00;
         border-radius: 38px;
-        font-weight:600;
-        line-height:5px;
-        margin-top:15px;
-        width:80px;
+        font-weight: 600;
+        line-height: 5px;
+        margin-top: 15px;
+        width: 150px;
     }
 
     #button_register:hover {
-        border: solid #FFAE00;
+        border: solid #ffae00;
         text-decoration: none;
         background-color: #332b27;
         transform: translate(0, 0);
