--- a/resources/sass/_register.scss
+++ b/resources/sass/_register.scss
@@ -1,55 +1,43 @@
-#register{
-    #containerForm  h3{
-        font-size:30px;
-        padding:15px 0;
-        padding-left:15px;
+#containerForm {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 50px 0;
+
+    textarea {
+        margin-top: 15px;
+        border-radius: 30px;
+        border: 1px solid grey;
+        padding-top: 10px;
     }
 
-    #containerForm{
-        display:flex;
-        justify-content: center;
-    } 
-
-    input{
-        margin:10px 0px;
+    input {
+        padding: 10px 200px 10px 20px;
+        border-radius: 30px;
+        border: 1px solid grey;
+        margin: 10px 0;
     }
 
-    #containerForm{
-        padding:20px 0px 80px 60px;
-    }
-
-    input{
-        width:83%;
-        height:45px;
-        border-radius:50px;
-        border:1px solid grey;
-    }
-
-    textarea{
-        border-radius:13px;
-        border:1px solid grey;
-        margin-top:10px;
-    }
-
-    #button_register{
-        color: #FFFFFF;
+    #button_below {
+        color: #ffffff;
         font-family: Helvetica;
         font-size: 15px;
-        background-color: #FFAE00;
+        background-color: #ffae00;
         text-decoration: none;
         cursor: pointer;
-        width:120px;
-        border: #FFAE00;
+        border: #ffae00;
         border-radius: 38px;
-        margin-top:10px;
-        font-weight:600;
+        font-weight: 600;
+        line-height: 5px;
+        margin-top: 15px;
+        padding: 15px 30px;
     }
 
-    #button_register:hover {
-        border: solid #FFAE00;
+    #button_below:hover {
+        border: solid #ffae00;
         text-decoration: none;
         background-color: #332b27;
-        transform: translate(0, 0);
-        -ms-transform: translate(-50%, -50%);
-   }
+        transform: translate(0%, 0%);
+    }
 }
