--- a/resources/sass/_header-home.scss
+++ b/resources/sass/_header-home.scss
@@ -4,7 +4,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 2rem 1.5rem;
+    padding: 20px;
     .logo {
         font-family: "Noto Serif Display", serif;
         color: #fff;
